<resources>
    <string name="app_name">Working_On_It</string>
    <string name="textview">TextView</string>
    <string name="datedisplay">TextView</string>
    <string name="dateText">TextView</string>
    <string name="job_description">Job Description</string>
    <string name="client_address">Client Address</string>
    <string name="client_phone">Client Phone</string>
    <string name="pay">Pay</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="required_tools">Required Tools</string>
    <string name="submit">Submit</string>
    <string name="add_client">Add Client</string>
    <string name="cancel">Cancel</string>
    <string name="save_edits">Save Edits</string>
    <string name="editcancel">Cancel</string>
</resources>
