<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wes19_000.working_on_it.NewJob">

    <ScrollView
        android:layout_width="358dp"
        android:layout_height="477dp"
        tools:ignore="MissingConstraints,UnknownId,UselessParent"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="18dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">

            <EditText
                android:id="@+id/clientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Client Name"
                android:inputType="textPersonName"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/clientAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/client_address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/clientPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/client_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/jobDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/job_description"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/required_tools"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pay"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/start_date"
                android:inputType="date" />

            <EditText
                android:id="@+id/endDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/end_date"
                android:inputType="date" />

            <Button
                android:id="@+id/new_client_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveInfo"
                android:text="@string/submit"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="265dp"
                tools:layout_editor_absoluteY="447dp" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cancelEntry"
                android:text="@string/cancel" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
