<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wes19_000.working_on_it.DateDisplay">

    <Button
        android:id="@+id/new_client_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_client"
        tools:ignore="MissingConstraints"
        android:onClick="saveInfo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:layout_editor_absoluteX="265dp"
        tools:layout_editor_absoluteY="447dp" />

    <ScrollView
        android:layout_width="358dp"
        android:layout_height="477dp"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="18dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">

            <EditText
                android:id="@+id/clientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Client Name"
                android:inputType="textPersonName"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/clientAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/client_address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/clientPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/client_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/jobDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/job_description"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
